--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,8 +1,8 @@
 <!--pages/index/index.wxml-->
 <view class="container">
-    <text>pages/index/index.wxml</text>
+    <text class="content">pages/index/index.wxml</text>
     <view>{{ msg }}</view>
-    <button bindtap="clickMe">点击我</button>
+    <button class="btn" bindtap="clickMe">点击我</button>
     <view class="userinfo">
         <button wx:if="{{!hasUserInfo && canIUse}}"> 获取头像昵称 </button>
         <block wx:else>
